--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="myMap" style="position:absolute;width:100%;height:100%;"></div>
+    <script type='text/javascript'
+            src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap&key=AgzXusPF-25Tn09YDN_298uoq2KuR1cx1mYBiy_698Stnf7gbnXyiq3jwf_SQBJo'></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
